# ngx_http_auth_jwt_module

./: .gitignore  CMakeLists.txt  CONFIG.txt.sample  LICENSE  README.md  config  fetch__json-parser.sh  jwt.c  nginx.config.sample  ngx_http_auth_jwt_module.c  ngx_http_auth_jwt_module_modules.g.c
json-parser.patches/: 0001-fix-support-Werror-unused-parameter.patch
